<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces package for Rona</description>
  <maintainer email="alexander.vuchkov@doccheck.com">user</maintainer>
  <license>X</license>

  <!-- CMake build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS C++ build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Custom messages and services build dependencies -->
  <depend>action_msgs</depend>

  <!-- Custom messages and services build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
